--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,19 @@
   width: 100%;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+  button {
+    background-color: #00cf9f; /* Green */
+    border-radius: 7px;
+  }
+
+  button:hover {
+    background-color: #ddd;
+    border-radius: 7px;
+    color: black;
+  }
 }
+
+
 
 .logo {
   height: 6em;
