--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,40 +6,23 @@
     /* filter: blur(8px); */
     background-size: cover;
     background-position: center;
-    /* color: white;
-    text-align: center; */
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     font-size: 24px;
     font-family: 'Open Sans', sans-serif;
-    width: 100%;
-    /* position: relative; */
-    /* top: 0%;
-    left: 0; */
-    /* width: 100%; */
-    /* height: 50%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* backdrop-filter: blur(50px); */
-    /* backdrop-filter: brightness(0.7); */
 }
 
 .header h1 {
-    /* margin: 50px; */
-    /* padding: 50px; */
     font-size: 36px;
+    padding-bottom: 2.5%;
 }
 
 .header button {
     background-color: #00cf9f;
-    /* color: white; */
     border: none;
-    /* padding: 10px 15px; */
-    /* margin: 25px; */
+    margin-bottom: 20px;
     padding: 20px;
     font-size: 18px;
-    /* cursor: pointer; */
     font-weight: bold;
 }
 
