--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,11 +4,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	/* position: relative; */
-	/* top: 0; */
-	/* left: 0; */
 	z-index: 1000; /* Ensure the navbar stays on top */
 	background-color: #00cf9f;
+}
+
+.navbar #logo {
+	width: auto;
+	height: 100px;
 }
 
 .navbar a {
