--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,22 +8,26 @@
 	background-color: #00cf9f;
 }
 
-.navbar #logo {
+#logo {
 	width: auto;
 	height: 100px;
+}
+#logo:hover {
+	border: none;
+	background-color: transparent;
 }
 
 .navbar a {
 	color: white;
 	text-decoration: none;
 	padding: 14px 15px;
-    display: flex;
-    font-weight: bold;
+	display: flex;
+	font-weight: bold;
 }
 
 .navbar a:hover {
 	background-color: #ddd;
-    border-radius: 7px;
+	border-radius: 7px;
 	color: black;
 }
 
@@ -37,11 +41,11 @@
 .navbar li {
 	display: inline;
 	text-transform: uppercase;
-    margin: 5px;
+	margin: 5px;
 }
 
 .navbar .book-online {
-	background-color: #444444; 
+	background-color: #444444;
 	border-radius: 7px;
-    height: 50px;
+	height: 50px;
 }
