--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,19 +1,20 @@
 .header h1 {
-    font-size: 36px;
-    padding-bottom: 2.5%;
+    margin-left: 20%;
+    margin-right: 20%;
+	font-size: 36px;
+	padding-bottom: 2.5%;
 }
 
 .header button {
-    background-color: #00cf9f;
-    border: none;
-    margin-bottom: 20px;
-    padding: 20px;
-    font-size: 18px;
-    font-weight: bold;
+	background-color: #00cf9f;
+	border: none;
+	padding: 20px;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .header button:hover {
-    background-color: #ddd;
-    border-radius: 7px;
+	background-color: #ddd;
+	border-radius: 7px;
 	color: black;
 }
