--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  width: 100%;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  button {
-    background-color: #00cf9f; /* Green */
-    border-radius: 7px;
-  }
+	position: relative;
+	height: 100vh;
+	/* max-width: 1280px; */
+	margin: 0 auto;
+	width: 100vw;
+	text-align: center;
+	font-family: "Open Sans", sans-serif;
+	button {
+		background-color: #00cf9f;
+		border-radius: 7px;
+	}
 
-  button:hover {
-    background-color: #ddd;
-    border-radius: 7px;
-    color: black;
-  }
+	button:hover {
+		background-color: #ddd;
+		border-radius: 7px;
+		color: black;
+	}
 }
-
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -51,4 +52,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
