--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,11 +6,14 @@
 	justify-content: space-between;
 	z-index: 1000; /* Ensure the navbar stays on top */
 	background-color: #00cf9f;
+	/* padding: */
 }
 
 #logo {
 	width: auto;
 	height: 100px;
+	/* position: absolute;
+	top: 0; */
 }
 #logo:hover {
 	border: none;
@@ -33,7 +36,6 @@
 
 .navbar ul {
 	list-style-type: none;
-	margin: 0;
 	padding: 20px;
 	display: flex;
 }
@@ -41,7 +43,9 @@
 .navbar li {
 	display: inline;
 	text-transform: uppercase;
-	margin: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: -3px;
 }
 
 .navbar .book-online {
