--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,12 @@
 	margin: 0 auto;
 	width: 100vw;
 	text-align: center;
-	font-family: "Open Sans", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+
+  /* @font-face {
+    font-family: face;
+    src: url();
+  } */
 	button {
 		background-color: #00cf9f;
 		border-radius: 7px;
@@ -17,6 +22,7 @@
 		color: black;
 	}
 }
+
 /* 
 .logo {
   height: 6em;
