--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,14 +12,20 @@
 #logo {
 	width: auto;
 	height: 100px;
-	/* position: absolute;
-	top: 0; */
-}
-#logo:hover {
+	pointer-events: none; /* Prevent hover effects */
 	border: none;
 	background-color: transparent;
 }
 
+.navbar-logo a {
+	display: flex;
+	align-items: center;
+}
+
+.navbar-logo a:hover {
+	border: none;
+	background-color: transparent;
+}
 .navbar a {
 	color: white;
 	text-decoration: none;
@@ -52,4 +58,11 @@
 	background-color: #444444;
 	border-radius: 7px;
 	height: 50px;
+}
+
+.active-link {
+	text-decoration: underline !important;
+	text-decoration-thickness: 3px !important;
+	text-underline-offset: 5px !important;
+	font-style: italic !important;
 }
