--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -42,11 +42,8 @@ p {
 
 .review-container {
 	display: flex;
-	flex-direction: row;
-    text-align: center;
-	justify-content: center;
-	align-items: center;
-	/* padding: 20px; */
+	padding-left: 5%;
+	padding-right: 5%;
 	background-color: #f9f9f9;
 	color: black;
 }
