--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,3 +5,12 @@
 	object-fit: cover;
 	margin-bottom: 10px;
 }
+
+.card {
+	max-width: 350px;
+	padding-bottom: 5%;
+}
+
+.card p {
+	padding: 10px;
+}
