--- a/src/pages/Mechanics.css
+++ b/src/pages/Mechanics.css
@@ -1,9 +1,26 @@
 .mechanics {
+	max-width: 1200px;
+	height: auto;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-around;
-	padding: 5%;
+	padding: 2%;
 	background-color: #f9f9f9;
 	color: black;
+	border-radius: 50px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.mechanics-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 5%;
+	/* margin: 10px;
+	padding: 10px; */
+	/* border-radius: 10px; */
+	background-color: #f9f9f9;
+	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
