--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,9 @@
 .header h1 {
-    margin-left: 20%;
-    margin-right: 20%;
+	margin-left: 20%;
+	margin-right: 20%;
 	font-size: 36px;
 	padding-bottom: 2.5%;
+	text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
 .header button {
@@ -11,6 +12,7 @@
 	padding: 20px;
 	font-size: 18px;
 	font-weight: bold;
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 .header button:hover {
