--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -7,12 +7,11 @@
 .form-container {
 	background-color: white;
 	color: black;
+	display: flex;
+	justify-content: center;
 }
 
 .form {
+	padding-top: 10px;
 	text-align: left;
-}
-.form-container {
-	display: flex;
-	justify-content: center;
 }
