--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,17 +1,18 @@
-.contact-container {
-	background-color: white;
-	color: black;
-	display: flex;
-}
-
 .form-container {
 	background-color: white;
 	color: black;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	padding: 2.5%;
+}
+
+.form-container h1 {
+	margin-top: 0px;
 }
 
 .form {
-	padding-top: 10px;
+	padding: 0;
 	text-align: left;
 }
