--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 	margin: 0 auto;
 	width: 100vw;
 	text-align: center;
-  font-family: 'Montserrat', sans-serif;
+	font-family: "Montserrat", sans-serif;
 
-  /* @font-face {
+	/* @font-face {
     font-family: face;
     src: url();
   } */
